packages/compiler/test/errors/temporal-dead-zone/update-before-decl/code.js
function f() {
  x++;
  let x = 0;
}
